# rst

./: .gitignore  .readthedocs.yaml  .zenodo.json  AUTHORS.md  CLAUDE.md  COMPLETE_PROJECT_DOCUMENTATION.md  CUDA_ARCHITECTURE_DESIGN.md  CUDA_ECOSYSTEM_FINAL_SUMMARY.md  CUDA_ECOSYSTEM_STATISTICS.json  DOCKER_OPTIMIZATION_GUIDE.md  DOCKER_PERFORMANCE_QUICK_START.md  Dockerfile  FINAL_COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEROPERABILITY_TEST_RESULTS.md  Makefile.ecosystem  PROJECT_SUMMARY.txt  README.md  TESTING_INFRASTRUCTURE_GUIDE.md  build_all_cuda_modules.sh  cpu_fitacf_processor  cuda_fitacf_results.txt  cuda_performance_report.md  cuda_python_implementation_guide.ipynb  cuda_test_report.md  deploy_docker_optimization.sh  deploy_docker_performance.ps1  deploy_docker_performance.sh  docker-compose-clean.yml  docker-compose.fitacf.yml  docker-compose.optimized.yml  docker-compose.yml  dockerfile  dockerfile.fitacf  expand_cuda_modules.sh  extended_cuda_benchmark.c  generate_test_fitacf_data.py  module_compatibility_report.md  quick_test.py  requirements.txt  (+6 more)
.github/test_profiles/: makelib.darwin
.github/workflows/: build-webapp.yml  cuda-ecosystem.yml  cuda-validation.yml  docker-build-push.yml  docs.yml  fitacf-search-test.yml  grid-search-test.yml  main.yml  performance-testing.yml  python-fitacf-gpu-benchmark.yml  superdarn-performance-tests.yml
CUDArst/: Makefile  Makefile.benchmark  README.md  test_integration  test_integration.c  test_real_world_mixing  test_real_world_mixing.c
CUDArst/benchmarks/: cuda_fitacf_processor_debug.cu  test_cuda_compilation.cu
CUDArst/include/: cudarst.h
CUDArst/lib/: libcudarst.so.2  libcudarst.so.2.0.0
CUDArst/src/: cudarst_core.c  cudarst_fitacf.c  cudarst_kernels.cu  cudarst_lmfit.c  cudarst_modules.c
CUDArst/tests/: test_integration
archive/: README.md
benchmark_results/: benchmark_failures.txt  benchmark_results.json  benchmark_summary.json  comparison.json
codebase/superdarn/src.lib/tk/fit.1.35/: CMakeLists.txt  Makefile.standalone  Makefile.test  README.md  build.sh  build_test.sh  makefile.cuda  simple_profile  simple_profile.c  test_profile.c
codebase/superdarn/src.lib/tk/fit.1.35/benchmarks/: CMakeLists.txt
codebase/superdarn/src.lib/tk/fit.1.35/cmake/: cmake_uninstall.cmake.in  fit-config.cmake.in
codebase/superdarn/src.lib/tk/fit.1.35/include/: cfitdata.h  datamap_array.h  dmap.h  fit.1.35_cuda.h  fitcfit_optimized.h  option.h  radarbeam.h  rconvert.h  rprm.h  rtime.h  rtypes.h  scandata.h  stdint_types.h
codebase/superdarn/src.lib/tk/fit.1.35/src/: fitcfit.c  fitcfit_optimized.c  fitread.c  fitscan.c  fitseek.c  fitwrite.c  option_stubs.c  radarbeam_stubs.c  scandata_stubs.c  stubs.c
codebase/superdarn/src.lib/tk/fit.1.35/src/avx/: matrix_avx.c
codebase/superdarn/src.lib/tk/fit.1.35/src/cuda/: fit.1.35_cuda.cu
codebase/superdarn/src.lib/tk/fit.1.35/stubs/include/: cfitdata.h
codebase/superdarn/src.lib/tk/fit.1.35/tests/: CMakeLists.txt  Makefile  benchmark_fitcfit.c  build_and_run.sh  profile_fit.c  test_fit.c
codebase/superdarn/src.lib/tk/grid_parallel.1.24/: CMakeLists.txt  Makefile  grid_parallel.pc.in
codebase/superdarn/src.lib/tk/grid_parallel.1.24/src/: avggrid_parallel.c  copygrid_parallel.c  filtergrid_parallel.c  gridmerge_parallel.c  gridseek_parallel.c  mergegrid_parallel.c  sortgrid_parallel.c
codebase/superdarn/src.lib/tk/grid_parallel.1.24/test/: test_copygrid_parallel.c  test_grid_parallel_suite.c  test_gridio_parallel.c
docs/: cuda_conversion_plan.md  index.md  module_migration_guide.md  requirements.txt
fitacf_v3.0_optimized.3/: CMakeLists.txt  README_ARRAY.md  build_fitacf.bat  test_docker.sh
fitacf_v3.0_optimized.3/docs/: DEVELOPER_GUIDE.md
fitacf_v3.0_optimized.3/include/: fit_structures_array.h
fitacf_v3.0_optimized.3/src/: determinations.h  fitacf_array_optimized.c  fitacftoplevel.c  fitacftoplevel_array.c  fitting_array.h  makefile  preprocessing_array.c  preprocessing_array.h
fitacf_v3.0_optimized.3/test/: test_array_vs_llist.c  test_fitacf_comprehensive.c  test_fitacf_performance_comprehensive.c
pythonv2/: ARCHITECTURE_DESIGN.md  CODEBASE_SUMMARY.md  README.md  requirements.txt  setup.py
scripts/: benchmark_comparison.py  benchmark_results.json  check_fitacf.py  compare_performance.py  complete_cuda_conversion.sh  comprehensive_cuda_analysis.sh  comprehensive_cuda_performance.sh  data_inventory.json  ecosystem_validation.sh  end_to_end_cuda_validation.sh  enhanced_superdarn_optimization_comparison.py  extract_superdarn_data.sh  generate_comprehensive_dashboard.py  generate_current_dashboard.py  generate_final_project_summary.sh  generate_github_dashboard.py  generate_optimization_dashboard.py  generate_original_vs_optimized_dashboard.py  generate_performance_dashboard.py  generate_simple_test_data.py  generate_test_data.py  generate_test_fitacf_data.sh  minio-compose.yml  optimization_build_framework.py  process_and_visualize.py  regression_check.py  run_benchmark.py  simple_test_data_generator.py  superdarn_benchmark.py  superdarn_optimization_engine.py  superdarn_optimization_testing_framework.py  superdarn_test_suite.sh  systematic_cuda_converter.sh  test_discovery.py  test_fitacf_comprehensive.sh  validate_gpu_implementations.sh
test-results/: component_summary.json  comprehensive_component_analysis.json  fitacf_array_results.txt  fitacf_llist_results.txt  focused_test_results.json  optimization_test_results.json  performance_dashboard.html  speck_optimization_results.txt  superdarn_component_dashboard.html  superdarn_original_vs_optimized_dashboard.html
test_data/: 20250115.1200.00.sas.fitacf  README.md  generate_test_data.py  processing_results_large.txt  processing_results_medium.txt  test_large.h  test_large.txt  test_medium.h  test_medium.txt  test_small.h  test_small.txt  test_summary.txt
validation_results/: pythonv2_test_and_coverage_report.md  validation_summary_20260205_135832.md
webapp/: .dockerignore  .env.example  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml
(+511 files in other folders)
